android frame animation

--- a/Animation/app/src/main/res/layout/activity_main.xml
+++ b/Animation/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.hc.animation.MainActivity">
 
     <Button
         android:id="@+id/btn_tween"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="tween"/>
+
+    <Button
+        android:id="@+id/btn_frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="frame"/>
 
 </LinearLayout>
