--- a/Animation/app/src/main/res/layout/activity_tween_animation.xml
+++ b/Animation/app/src/main/res/layout/activity_tween_animation.xml
@@ -108,15 +108,23 @@
             android:textSize="12sp"/>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_centerHorizontal="true"/>
+
         <ImageView
             android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:src="@drawable/img2"/>
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
