--- a/Animation/app/src/main/res/drawable/anim_frame.xml
+++ b/Animation/app/src/main/res/drawable/anim_frame.xml
@@ -9,3 +9,9 @@
     <item android:drawable="@drawable/img5" android:duration="1000"/>
 
 </animation-list>
+
+    <!--
+        根标签为animation-list，其中oneshot代表着是否只展示一遍，设置为false会不停的循环播放动画
+        根标签下，通过item标签对动画中的每一个图片进行声明
+        android:duration 表示展示所用的该图片的时间长度
+    -->
