--- a/Animation/app/src/main/res/layout/activity_main.xml
+++ b/Animation/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,11 @@
         android:textAllCaps="false"
         android:text="frame"/>
 
+    <Button
+        android:id="@+id/btn_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="layout"/>
+
 </LinearLayout>
