--- a/Animation/app/src/main/res/layout/activity_property_animaion.xml
+++ b/Animation/app/src/main/res/layout/activity_property_animaion.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="singleAnimator"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/btn_set"
@@ -23,19 +23,28 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="animatorSet"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_timer"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="timer"
+            android:textAllCaps="false" />
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
             android:id="@+id/img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:onClick="clickImg"
-            android:src="@drawable/img2"/>
+            android:src="@drawable/img2" />
     </RelativeLayout>
 
 </LinearLayout>
