--- a/Animation/app/src/main/res/layout/activity_arc_menu.xml
+++ b/Animation/app/src/main/res/layout/activity_arc_menu.xml
@@ -56,8 +56,10 @@
         android:id="@+id/img_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:paddingTop="7dp"
+        android:paddingLeft="6dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:src="@drawable/button"/>
 
 </FrameLayout>
